# messaging-api

./: .example.env  .example.prod.env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  pyproject.toml
auth/: custom_token_auth.py
config/: settings.py  urls.py
conversations/: admin.py  models.py  serializers.py  urls.py  views.py
conversations/migrations/: 0001_initial.py
docker/django/: Dockerfile  Dockerfile.prod
templates/: base.html  index.html
users/: serializers.py  urls.py  views.py
